@@ -1,5 +1,6 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
+- Added CU views for transactions and invoices
 - Improved balance to handle multi-currency objects
 - Fixed payee template
 - Replaced locale currency with intcomma and floatformat
